--- a/app/src/main/res/layout/fragment_picture.xml
+++ b/app/src/main/res/layout/fragment_picture.xml
@@ -15,10 +15,22 @@
         android:src="@drawable/uploadphoto"
         android:layout_margin="10dp"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/btnUploadPhoto"
+        app:layout_constraintBottom_toTopOf="@id/etAddCaption"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/etAddCaption"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Add Some Caption"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivUploadPhoto"
+        app:layout_constraintBottom_toTopOf="@id/btnUploadPhoto"/>
 
     <Button
         android:id="@+id/btnUploadPhoto"
@@ -27,7 +39,7 @@
         android:text="upload photo"
         android:padding="10dp"
         android:textSize="30sp"
-        app:layout_constraintTop_toBottomOf="@id/ivUploadPhoto"
+        app:layout_constraintTop_toBottomOf="@id/etAddCaption"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
